--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -13,17 +13,7 @@
             <div class="col-lg-3">
 
                 <h1 class="my-4">GeekShop</h1>
-                <div class="category-menu">
-                    <div class="list-group mb-1">
-                        <a href="{% url 'products:index' %}" class="list-group-item">Все</a>
-                    </div>
-                    <div class="list-group">
-                        {% for category in categories %}
-                            <a href="{% url 'mainapp:products' category.pk %}"
-                               class="list-group-item">{{ category|title }}</a>
-                        {% endfor %}
-                    </div>
-                </div>
+                {% include 'mainapp/includes/inc_category_menu.html' %}
             </div>
 
             <div class="col-lg-9">
@@ -62,19 +52,19 @@
                     {% include 'mainapp/includes/inc_product_list.html' %}
                 </div>
 
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
-                        </li>
-                    </ul>
-                </nav>
+{#                <nav aria-label="Page navigation example">#}
+{#                    <ul class="pagination justify-content-center">#}
+{#                        <li class="page-item {% if not products.has_previous %}disabled{% endif %}">#}
+{#                            <a class="page-link" href="{% url 'mainapp:page' categories.pk products.previous_page_number %}" tabindex="-1" aria-disabled="true">Previous</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="page-item"><a class="page-link" href="#">1</a></li>#}
+{##}
+{#                        <li class="page-item {% if not products.has_next %}disabled{% endif %}">#}
+{#                            <a class="page-link" href="{% url 'mainapp:page' categories.pk products.next_page_number %}">Next</a>#}
+{#                        </li>#}
+{#                    </ul>#}
+{#                </nav>#}
 
             </div>
 
@@ -87,6 +77,6 @@
     {% include 'mainapp/includes/inc_footer.html' %}
 {% endblock footer %}
 
-{% block js %}
-    <script src="{% static 'js/products_script.js' %}"></script>
-{% endblock js %}
+{#{% block js %}#}
+{#    <script src="{% static 'js/products_script.js' %}"></script>#}
+{#{% endblock js %}#}
