--- a/adminapp/templates/adminapp/shopuser_list.html
+++ b/adminapp/templates/adminapp/shopuser_list.html
@@ -23,7 +23,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for user in users %}
+                            {% for user in object_list %}
                                 <tr class="{% if not user.is_active %}text-muted bg-light{% endif %}">
                                     <td><a class="{% if not user.is_active %}text-muted{% endif %}"
                                            href="{% url 'admin:user_edit' user.pk %}"
