--- a/mainapp/templates/mainapp/includes/inc_product_list.html
+++ b/mainapp/templates/mainapp/includes/inc_product_list.html
@@ -1,6 +1,6 @@
 <div class="row product-card">
-    {% if products %}
-        {% for product in products %}
+    {% if object_list %}
+        {% for product in object_list %}
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                     <a href="{% url 'products:product' product.pk %}">
