--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -40,6 +40,11 @@
                     </div>
                 </form>
             </div>
+            <div class="list-group-horizontal card-footer text-center small">
+                <a href="{% url 'social:begin' 'vk-oauth2' %}?next=/">
+                    <i class="fab fa-vk"></i>
+                </a>
+            </div>
             <div class="card-footer text-center">
                 <div class="small"><a href="{% url 'auth:registration' %}">Нужен аккаунт? Зарегистрируйся!</a></div>
             </div>
