--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -57,6 +57,22 @@
                             {{ form.age }}
                         </div>
                     </div>
+                    <div class="form-row">
+                        <div class="col-lg-12">
+                            <label class="small mb-1" for="{{ form.tagline.id_for_label }}">Теги</label>
+                            {{ form_profile.tagline }}
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ form.gender.id_for_label }}">Пол</label>
+                            {{ form_profile.gender }}
+                        </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ form.about_me.id_for_label }}">О себе</label>
+                            {{ form_profile.about_me }}
+                        </div>
+                    </div>
                     {% if messages %}
                         <div class="form-row">
                             <div class="col-lg-12">
